Fix vertical alignment a bit

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -54,6 +54,8 @@
 
 .navbar-brand {
   display: inline-block;
+  padding-top: .25rem;
+  padding-bottom: .25rem;
   margin-right: $navbar-padding-x;
   font-size: $font-size-lg;
   line-height: inherit;
